# planets

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/jupiter/: sphere.mtl
assets/mars/: sphere.mtl
assets/mercury/: sphere.mtl
assets/plane/: plane.mtl
assets/poterie_obj/: poterie_obj.mtl
assets/sphere/: sphere.mtl
assets/venus/: sphere.mtl
includes/glad/: glad.h
includes/learnopengl/: model.h  shader.h
shaders/: deferred_shading.frag  deferred_shading.vert
src/: glad.c
